horizontal scroll fixed

--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -2,6 +2,7 @@ body {
   font-family: muli;
   font-size: 14px;
   color: $text-color;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 2rem;
